--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="images/icon-48.png">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Your To-Do's</title>
