--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#86a4fd">
+	<meta name="apple-mobile-web-app-status-bar" content="#86a4fd" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="images/icon-48.png">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="apple-touch-icon" href="/images/icon-48.png">
 	<title>Your To-Do's</title>
 </head>
 <body>
@@ -19,7 +22,7 @@
 	</header>
 	<form>
 		<input type="text" class="todo-input">
-		<button class="todo-button" type="submit">
+		<button class="todo-button" name="Add todo button" type="submit">
 			<i class="fas fa-plus-square"></i>
 		</button>
 		<div class="select">
