--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="#86a4fd">
-	<meta name="apple-mobile-web-app-status-bar" content="#86a4fd" />
+	<meta name="theme-color" content="#1a53ff">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="images/icon-48.png">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="apple-touch-icon" href="/images/icon-48.png">
+	<!-- ios support -->
+	<link rel="apple-touch-icon" href="images/android-launchericon-96-96.png">
+	<meta name="apple-mobile-web-app-status-bar" content="#1a53ff" />
 	<title>Your To-Do's</title>
 </head>
 <body>
 	
 	<header>
-		<img src="images/icon-48.png" alt="Todo image" width="50" height="50">
+		<img src="/images/icon-48.png" alt="Todo image" width="50" height="50">
 		<h1>Your To-Do's</h1>
 	</header>
 	<form>
