fix icon icon path issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	
 	<header>
-		<img src="/images/icon-48.png" alt="Todo image" width="50" height="50">
+		<img src="images/icon-48.png" alt="Todo image" width="50" height="50">
 		<h1>Your To-Do's</h1>
 	</header>
 	<form>
