--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</header>
 	<form>
 		<input type="text" class="todo-input">
-		<button class="todo-button" name="Add todo button" type="submit">
+		<button class="todo-button" name="Add-todo-button" type="submit">
 			<i class="fas fa-plus-square"></i>
 		</button>
 		<div class="select">
