--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		<h1>Your To-Do's</h1>
 	</header>
 	<form>
-		<input type="text" class="todo-input">
-		<button class="todo-button" name="Add-todo-button" type="submit">
+		<input type="text" aria-label="Todo input" class="todo-input">
+		<button class="todo-button" name="Add-todo-button" aria-label="Add todo button" type="submit">
 			<i class="fas fa-plus-square"></i>
 		</button>
 		<div class="select">
-			<select name="todos" class="filter-todo">
+			<select name="todos" aria-label="Todo search" class="filter-todo">
 				<option value="all">All</option>
 				<option value="completed">Completed</option>
 				<option value="uncompleted">Uncompleted</option>
