--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 		<ul class="todo-list"></ul>
 	</div>
 
+	<footer class="footer">
+		Created by <a class="name-color" href="https://github.com/Davion" target="_blank"> Klajdi </a> 2021.
+	</footer>
+
 	<script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
