fix responsive issues with todo-list scroll and add clear all btn in html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 		<ul class="todo-list"></ul>
 	</div>
 
+	<div class="clear-all-container">
+		<button class="clear-all-btn">Clear All</button>
+	</div>
+
 	<footer class="footer">
 		Created by <a class="name-color" href="https://github.com/Davion"> Klajdi </a> 2021.
 	</footer>
